--- a/hello1.html
+++ b/hello1.html
@@ -3,7 +3,9 @@
     <head>
         <title>hello!</title>
     </head>
-    <body>
+    <body> 
+        <h1>welcome to my website!<h1>
+            <h2>hello!</h2>
         Hello World!
     </body>
 </html>
